--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://Zuma-coder.github.io"
+  "homepage": "https://zuma-coder.github.io/react-todo-app"
 }
